Pass arguments to exec in a String array